2000-02-21  Ettore Perazzoli  <ettore@helixcode.com>

	* toolbar.c (editor_toolbar_bold_cb): Use the new style mask
	system.
	(editor_toolbar_italic_cb): Likewise.
	(editor_toolbar_underline_cb): Likewise.
	(editor_toolbar_strikeout_cb): Likewise.

2000-02-16  Dan Winship  <danw@helixcode.com>

	* editor-control-factory.c (editor_control_factory): Update for
	latest round of interface changes.
	* test-html-editor-control.c (container_create): likewise
	* html-editor-control.gnorba: likewise

2000-02-15  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* Makefile.am: Add GNOME_EXTRA_CFLAGS to the INCLUDES.

2000-02-14  Ettore Perazzoli  <ettore@helixcode.com>

	* toolbar.c: Implemented the paragraph style menu.

2000-02-01  Ettore Perazzoli  <ettore@helixcode.com>

	* editor-control-factory.c: Set up the UI Handler.

	* test-html-editor-control.c: Updated to support the Bonobo UI
	Handler.

	* menubar.c: New file.
	* menubar.h: New file.

	* toolbar.c: New file.
	* toolbar.h: New file.

2000-01-26  Ettore Perazzoli  <ettore@helixcode.com>

	* All files: Updated according to the new Bonobo naming changes.

2000-01-25  Ettore Perazzoli  <ettore@helixcode.com>

	* test-html-editor-control.c: Added a "Save As..." menu item and its
	implementation.

	* persist-stream-impl.c (save): Implemented.

	* test-html-editor-control.c (container_create): Abort if we
	cannot get the control.

2000-01-25  Ettore Perazzoli  <ettore@helixcode.com>

	* test-html-editor-control.c: New file.

	* main.c: New file.

	* persist-stream-impl.c: New file.
	* persist-stream-impl.h: New file.

	* editor-control-factory.c: New file.
	* editor-control-factory.h: New file.