@@ -1,6 +1,10 @@
-2000-02-21  Ettore Perazzoli  <ettore@helixcode.com>
+2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>
 
-	* toolbar.c (editor_toolbar_bold_cb): Use the new style mask
+	* toolbar.c (insertion_font_style_changed_cb): New function.
+	(create_editor_toolbar): Connect it to the
+	"insertion_font_style_changed_cb" signal.
+
+	* toolbar.c: (editor_toolbar_bold_cb): Use the new style mask
 	system.
 	(editor_toolbar_italic_cb): Likewise.
 	(editor_toolbar_underline_cb): Likewise.
